<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_class"
        android:name="com.example.myapplication.ClassFragment"
        android:label="@string/menu_class"
        tools:layout="@layout/fragment_class" />

    <fragment
        android:id="@+id/nav_web"
        android:name="com.example.myapplication.WebFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web" />
</navigation>